syntax = "proto3";
package saas.internal;

option go_package = "github.com/go-saas/kit/saas/private/conf;conf";

import "conf/conf.proto";
import "blob/blob.proto";

message Bootstrap {
  conf.Data data = 2;
  conf.Security security=3;
  conf.Services services =4;
  conf.Logging logging=6;
  conf.Tracers tracing=7;
  conf.AppConfig app=8;
  conf.Dev dev=9;

  SaasConf saas=20;

}


message SaasConf{
    repeated DatabaseTemplate database = 1;
    conf.Cookie tenant_cookie=2;
}

message DatabaseTemplate{
  string name=1;
  string template=2;

}